test/visibility/private/iters/accessesOther.good
accessesOther.chpl:11: error: Cannot access 'foo', 'foo' is private to 'M1'
